--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+body {
+    font-family: "Helvetica Neue", sans-serif;
+    font-weight: 300;
+}
+
 .input-add-item {
-    width: 80%;
+    width: 100%;
+}
+
+.form-header {
+    font-size: 50px;
+    font-weight: 200;
 }
