added single item view

--- a/templates/addItemForm.html
+++ b/templates/addItemForm.html
@@ -1,4 +1,4 @@
-<div class="md-padding" id="popupContainer">
+<div class="md-padding container" id="popupContainer">
 
     <h1 class="form-header">Add new product</h1>
 
