--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,78 +1,85 @@
-<section layout="row" flex>
+<div class="container">
+    <section layout="row" flex>
 
-    <md-sidenav style="min-height:100vh; min-width: 250px; width: 250px; margin-top: 10px"
-                class="md-sidenav-left"
-                md-component-id="left"
-                md-is-locked-open="$mdMedia('gt-md')"
-                md-whiteframe="4">
+        <md-sidenav style="min-height:100vh; min-width: 250px; width: 250px; margin-top: 10px"
+                    class="md-sidenav-left"
+                    md-component-id="left"
+                    md-is-locked-open="$mdMedia('gt-md')"
+                    md-whiteframe="4">
 
-        <md-content layout-padding ng-controller="LeftCtrl">
-            <md-button ng-click="close()" class="md-primary" hide-gt-md>
-                Close Sidenav Left
-            </md-button>
-            <p hide show-gt-md>
-                Feel free to add some products to our database
-            </p>
-        </md-content>
-
-    </md-sidenav>
-
-
-    <!-- container -->
-    <div>
-        <section layout="row" flex>
-
-            <md-content flex>
-
-                <md-card md-theme-watch>
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">{{store.name}}</span>
-                            <span class="md-subhead">{{store.city}}, {{store.street}}, {{store.number}}</span>
-                        </md-card-title-text>
-                        <md-card-title-media>
-                            <div class="md-media-lg card-media">
-                            </div>
-                        </md-card-title-media>
-                    </md-card-title>
-                    <md-card-actions layout="row" layout-align="end center">
-                        <md-button ng-click="getStore()">Action 1</md-button>
-                        <md-button>Action 2</md-button>
-                    </md-card-actions>
-                </md-card>
-
-                <md-list flex>
-                    <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
-                    <md-list-item class="md-3-line" ng-repeat="item in store.items">
-                        <div class="md-list-item-text" layout="column" style="overflow: visible">
-                            <md-card ng-click="consoletest2()" style="outline: none; border: 0; cursor: pointer; overflow: visible" md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 10" ng-mouseleave="height = 3">
-                                <md-card-title>
-                                    <md-card-title-text>
-                                        <span class="md-headline">{{item.name}}</span>
-                                        <span class="md-subhead">{{item.price | currency: "$"}}</span>
-                                    </md-card-title-text>
-                                </md-card-title>
-                                <md-card-content layout="row" layout-align="space-between">
-                                    <div class="md-media-xl card-media">
-                                        <img ng-src="{{item.photo}}?{{$index}}"
-                                             style="width: 200px; height: auto" alt="{{item.photo}}"/>
-                                    </div>
-                                    <p style="margin-left: 25px">{{item.description}}</p>
-
-                                </md-card-content>
-                                <md-card-actions layout="row" layout-align="end center">
-                                    <p style="margin-right: 10px">views: {{item.views}}</p>
-                                    <p>id: {{item.id}}</p>
-                                    <md-button ng-click="viewUp(item.id)">View Up</md-button>
-                                    <md-button>Action 2</md-button>
-                                </md-card-actions>
-                            </md-card>
-                        </div>
-                    </md-list-item>
-                </md-list>
+            <md-content layout-padding ng-controller="LeftCtrl">
+                <md-button ng-click="close()" class="md-primary" hide-gt-md>
+                    Close Sidenav Left
+                </md-button>
+                <p hide show-gt-md>
+                    Feel free to add some products to our database
+                </p>
             </md-content>
-        </section>
 
-        <md-button ng-click="getStore()">get Store</md-button>
-    </div>
-</section>
+        </md-sidenav>
+
+
+        <!-- container -->
+        <div>
+            <section layout="row" flex>
+
+                <md-content flex>
+
+                    <md-card md-theme-watch>
+                        <md-card-title>
+                            <md-card-title-text>
+                                <span class="md-headline">{{store.name}}</span>
+                                <span class="md-subhead">{{store.city}}, {{store.street}}, {{store.number}}</span>
+                            </md-card-title-text>
+                            <md-card-title-media>
+                                <div class="md-media-lg card-media">
+                                </div>
+                            </md-card-title-media>
+                        </md-card-title>
+                        <md-card-actions layout="row" layout-align="end center">
+                            <md-button ng-click="getStore()">Action 1</md-button>
+                            <md-button>Action 2</md-button>
+                        </md-card-actions>
+                    </md-card>
+
+                    <md-list flex>
+                        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
+                        <md-list-item class="md-3-line" ng-repeat="item in store.items">
+                            <a ng-href="item/{{item.id}}">
+                                <div class="md-list-item-text" layout="column" style="overflow: visible">
+                                    <md-card ng-click="consoletest2()"
+                                             style="outline: none; border: 0; cursor: pointer; overflow: visible"
+                                             md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
+                                             ng-mouseleave="height = 3">
+                                        <md-card-title>
+                                            <md-card-title-text>
+                                                <span class="md-headline">{{item.name}}</span>
+                                                <span class="md-subhead">{{item.price | currency: "$"}}</span>
+                                            </md-card-title-text>
+                                        </md-card-title>
+                                        <md-card-content layout="row" layout-align="space-between">
+                                            <div class="md-media-xl card-media">
+                                                <img ng-src="{{item.photo}}?{{$index}}"
+                                                     style="width: 200px; height: auto" alt="{{item.photo}}"/>
+                                            </div>
+                                            <p style="margin-left: 25px">{{item.description}}</p>
+
+                                        </md-card-content>
+                                        <md-card-actions layout="row" layout-align="end center">
+                                            <p style="margin-right: 10px">views: {{item.views}}</p>
+                                            <p>id: {{item.id}}</p>
+                                            <md-button ng-click="viewUp(item.id)">View Up</md-button>
+                                            <md-button>Action 2</md-button>
+                                        </md-card-actions>
+                                    </md-card>
+                                </div>
+                            </a>
+                        </md-list-item>
+                    </md-list>
+                </md-content>
+            </section>
+
+            <md-button ng-click="getStore()">get Store</md-button>
+        </div>
+    </section>
+</div>
