--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -73,7 +73,33 @@
             <md-tab label="Reviews">
                 <md-content class="md-padding">
                     <h1 class="md-display-2">Reviews</h1>
-                    <p>{{fooMsg}}</p>
+                    <md-list flex>
+                        <md-list-item class="md-3-line" ng-repeat="review in reviews">
+                            <div class="md-avatar" style="background-color: #B2DFDB" layout="row"
+                                 layout-align="center center">
+                                <div>{{$index}}</div>
+                            </div>
+                            <div class="md-list-item-text" layout="row" layout-xs="column">
+                                <div layout="column" flex-gt-xs="33" flex>
+                                    <div style="font-size: 25px">
+                                        {{review.description}}
+                                    </div>
+                                    <div style="font-size: 15px">
+                                        {{review.rating}}
+                                    </div>
+                                </div>
+                                <div flex-gt-xs="33" flex style="font-size: 35px">
+
+                                </div>
+                                <div flex-gt-xs="20" flex>
+                                    <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                </div>
+                                <div flex-gt-xs="14" flex style="height: 15px"></div>
+
+                            </div>
+                            <md-divider></md-divider>
+                        </md-list-item>
+                    </md-list>
                 </md-content>
             </md-tab>
             <md-tab label="Add Review">
