--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ body {
     font-weight: 200;
 }
 
+.header-sm {
+    font-size: 30px;
+    font-weight: 200;
+}
+
 a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
