--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -94,7 +94,7 @@
 
                                 </div>
                                 <div flex-gt-xs="20" flex>
-                                    <md-button class="md-primary md-raised">BUY NOW</md-button>
+
                                 </div>
                                 <div flex-gt-xs="14" flex style="height: 15px"></div>
 
@@ -109,22 +109,41 @@
                     <h1 class="md-display-2 form-header">Add review</h1>
                     <div layout="row" layout-align="center">
                         <div flex="100" flex-gt-sm="80" flex-gt-md="70">
-                            <md-input-container class="input-add-item">
-                                <label>Description</label>
-                                <textarea ng-model="newReview.description" md-maxlength="500" rows="5"
-                                          md-select-on-focus></textarea>
-                            </md-input-container>
+                            <md-content layout-padding="">
+                                <md-input-container class="input-add-item" flex="">
+                                    <label>Description</label>
+                                    <textarea ng-model="newReview.description" md-maxlength="500" columns="5"
+                                              md-select-on-focus></textarea>
+                                </md-input-container>
+                            </md-content>
 
-                            <md-input-container class="input-add-item">
-                                <label>Rating</label>
-                                <md-select ng-model="newReview.rating">
-                                    <md-option>1</md-option>
-                                    <md-option>2</md-option>
-                                    <md-option>3</md-option>
-                                    <md-option>4</md-option>
-                                    <md-option>5</md-option>
-                                </md-select>
-                            </md-input-container>
+                            <div>
+                                <h4 class="header-sm">Rating: {{newReview.rating}}
+                                    <md-icon style="font-size: 25px; padding-bottom: 5px">star</md-icon>
+                                </h4>
+                                <fieldset class="rating">
+                                    <input type="radio" id="star5" name="rating" ng-model="chosen" ng-value="5"
+                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star5"
+                                                                                         title="Awesome - 5 stars"></label>
+                                    <input type="radio" id="star4" name="rating" ng-model="chosen" ng-value="4"
+                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star4"
+                                                                                         title="Pretty good - 4 stars"></label>
+                                    <input type="radio" id="star3" name="rating" ng-model="chosen" ng-value="3"
+                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star3"
+                                                                                         title="Meh - 3 stars"></label>
+                                    <input type="radio" id="star2" name="rating" ng-model="chosen" ng-value="2"
+                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star2"
+                                                                                         title="Kinda bad - 2 stars"></label>
+                                    <input type="radio" id="star1" name="rating" ng-model="chosen" ng-value="1"
+                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star1"
+                                                                                         title="Sucks big time - 1 star"></label>
+                                </fieldset>
+                            </div>
+                            <div layout="row" layout-align="end center">
+                                <md-button class="md-primary md-raised" ng-click="sendReview()">Add
+                                    <md-icon>send</md-icon>
+                                </md-button>
+                            </div>
                         </div>
 
                     </div>
