added display number of reviews

--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -19,7 +19,7 @@
                     <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
                 </div>
                 <div>
-                    Rating: {{single.avgRating}}, {{single.views}}
+                    Rating: {{single.avgRating}}, Reviews: {{single.noOfReviews}}
                 </div>
             </div>
 
