--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -45,7 +45,7 @@
                     <md-list flex>
                         <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
                         <md-list-item class="md-3-line" ng-repeat="item in store.items">
-                            <a ng-href="/item/{{item.id}}">
+                            <a ng-href="/#/item/{{item.id}}">
                                 <div class="md-list-item-text" layout="column" style="overflow: visible">
                                     <md-card ng-click="consoletest2()"
                                              style="outline: none; border: 0; cursor: pointer; overflow: visible"
