improved sidenav toggle depending if the view has sidenav or not

--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,7 +1,7 @@
 <div class="container">
     <section layout="row" flex>
 
-        <md-sidenav style="min-height:100vh; min-width: 250px; width: 250px; margin-top: 10px"
+        <md-sidenav style="min-height:100vh; min-width: 250px; width: 250px;"
                     class="md-sidenav-left"
                     md-component-id="left"
                     md-is-locked-open="$mdMedia('gt-md')"
