added md confirm dialog before sending review

--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -140,7 +140,7 @@
                                 </fieldset>
                             </div>
                             <div layout="row" layout-align="end center">
-                                <md-button class="md-primary md-raised" ng-click="sendReview(); newReview.description=''">Add
+                                <md-button class="md-primary md-raised" ng-click="showConfirm($event)">Add
                                     <md-icon>send</md-icon>
                                 </md-button>
                             </div>
