--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,7 +1,7 @@
 <div class="container">
     <section layout="row" flex>
 
-        <md-sidenav style="min-height:100vh; min-width: 250px; width: 250px;"
+        <md-sidenav style="min-height:100%; min-width: 250px; width: 250px;"
                     class="md-sidenav-left"
                     md-component-id="left"
                     md-is-locked-open="$mdMedia('gt-md')"
@@ -11,7 +11,7 @@
                 <md-button ng-click="close()" class="md-primary" hide-gt-md>
                     Close Sidenav Left
                 </md-button>
-                <p hide show-gt-md>
+                <p>
                     Feel free to add some products to our database
                 </p>
             </md-content>
