--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,11 @@ body {
 a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
+
+.side-nav-element {
+    width: 100%;
+    margin: 0;
+    padding: 0 0 0 25px;
+    text-align: start;
+    border-radius: 0;
+}
