--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,16 +1,19 @@
 <div class="container">
     <section layout="row" flex>
 
-        <md-sidenav style="min-height:100%; min-width: 250px; width: 250px;"
+        <md-sidenav style="height:100%; min-width: 250px; width: 250px; padding-top: 10px"
                     class="md-sidenav-left"
                     md-component-id="left"
                     md-is-locked-open="$mdMedia('gt-md')"
                     md-whiteframe="4">
 
-            <md-content layout-padding ng-controller="LeftCtrl">
+            <md-content layout-padding ng-controller="LeftCtrl" style="padding: 0">
                 <md-button ng-click="close()" class="md-primary" hide-gt-md>
                     Close Sidenav Left
                 </md-button>
+                <a href="/#/" class="md-button md-ink-ripple side-nav-element">
+                    <md-icon>home</md-icon> Home page
+                </a>
                 <p>
                     Feel free to add some products to our database
                 </p>
