--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <section layout="row" flex>
 
         <md-sidenav style="height:100%; min-width: 250px; width: 250px; padding-top: 10px"
