--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -3,7 +3,7 @@
 
         <div layout="column">
             <md-sidenav
-                    style="height:100%; min-width: 250px; width: 250px; padding-top: 10px; margin-bottom: 8px; margin-top: 16px"
+                    style="height:100%; min-width: 250px; width: 250px; padding-top: 10px; margin-bottom: 8px; margin-top: 0;"
                     class="md-sidenav-left"
                     md-component-id="left"
                     md-is-locked-open="$mdMedia('gt-md')"
@@ -28,7 +28,7 @@
 
 
         <!-- container -->
-        <md-content flex="">
+        <md-content flex="" style="height: 100%">
             <div flex="" layout-padding style="width: 100%; height: 100px;">
 
                 <div ng-repeat="item in store.items">
