--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -32,31 +32,33 @@
             <div flex="" layout-padding style="width: 100%; height: 100px;">
 
                 <div ng-repeat="item in store.items">
-                    <md-card ng-click="consoletest2()"
-                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%;"
-                             md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                             ng-mouseleave="height = 3">
-                        <md-card-title>
-                            <md-card-title-text>
-                                <span class="md-headline">{{item.name}}</span>
-                                <span class="md-subhead">{{item.price | currency: "$"}}</span>
-                            </md-card-title-text>
-                        </md-card-title>
-                        <md-card-content layout="row" layout-align="space-between">
-                            <div class="md-media-xl card-media">
-                                <img ng-src="{{item.photo}}?{{$index}}"
-                                     style="width: 200px; height: auto" alt="{{item.photo}}"/>
-                            </div>
-                            <p style="margin-left: 25px">{{item.description}}</p>
+                    <a ng-href="/#/item/{{item.id}}">
+                        <md-card ng-click="consoletest2()"
+                                 style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%;"
+                                 md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
+                                 ng-mouseleave="height = 3">
+                            <md-card-title>
+                                <md-card-title-text>
+                                    <span class="md-headline">{{item.name}}</span>
+                                    <span class="md-subhead">{{item.price | currency: "$"}}</span>
+                                </md-card-title-text>
+                            </md-card-title>
+                            <md-card-content layout="row" layout-align="space-between">
+                                <div class="md-media-xl card-media">
+                                    <img ng-src="{{item.photo}}?{{$index}}"
+                                         style="width: 200px; height: auto" alt="{{item.photo}}"/>
+                                </div>
+                                <p style="margin-left: 25px">{{item.description}}</p>
 
-                        </md-card-content>
-                        <md-card-actions layout="row" layout-align="end center">
-                            <p style="margin-right: 10px">views: {{item.views}}</p>
-                            <p>id: {{item.id}}</p>
-                            <md-button ng-click="viewUp(item.id)">View Up</md-button>
-                            <md-button>Action 2</md-button>
-                        </md-card-actions>
-                    </md-card>
+                            </md-card-content>
+                            <md-card-actions layout="row" layout-align="end center">
+                                <p style="margin-right: 10px">views: {{item.views}}</p>
+                                <p>id: {{item.id}}</p>
+                                <md-button ng-click="viewUp(item.id)">View Up</md-button>
+                                <md-button>Action 2</md-button>
+                            </md-card-actions>
+                        </md-card>
+                    </a>
                 </div>
             </div>
         </md-content>
