--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ body {
     font-weight: 200;
 }
 
+.price {
+    font-size: 45px;
+    font-weight: 300;
+}
+
 a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
