--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -33,20 +33,25 @@
             <div ng-repeat="item in store.items">
                 <a ng-href="/#/item/{{item.id}}">
                     <md-card layout-padding ng-click="consoletest2()"
-                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%;"
+                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; height: 202px"
                              md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
                              ng-mouseleave="height = 3">
                         <div layout="row">
                             <div flex="25">
                                 <img ng-src="{{item.photo}}?{{$index}}"
-                                     style="width: 200px; height: auto" alt="{{item.photo}}"/>
+                                     style="height: 170px; width: auto" alt="{{item.photo}}"/>
                             </div>
                             <div flex="50" layout="column">
-                                <div class="header-sm">{{item.name}}</div>
-                                <div>{{item.avgRating}} {{item.reviews.length}} Reviews</div>
-                                <div>{{item.category}}</div>
+                                <div flex="25" class="header-sm">{{item.name}}</div>
+                                <div flex="25">
+                                    <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
+                                    <md-icon style="margin: auto; font-size: 20px">star</md-icon>
+                                    <span style="font-size: 20px; font-weight: 200">{{item.reviews.length}} Reviews</span>
+                                </div>
+                                <div flex="25">Category: {{item.category}}</div>
+                                <div flex>{{item.description | firstSentence}}</div>
                             </div>
-                            <div flex="25" layout="column">
+                            <div flex="25" layout="column" class="price" style="color: #009688">
                                 {{item.price | currency}}
                                 <md-button class="md-primary md-raised">BUY NOW</md-button>
                             </div>
