--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -37,19 +37,19 @@
                              md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
                              ng-mouseleave="height = 3">
                         <div layout="row">
-                            <div flex="25">
+                            <div flex="33" flex-gt-md="25">
                                 <img ng-src="{{item.photo}}?{{$index}}"
-                                     style="height: 170px; width: auto" alt="{{item.photo}}"/>
+                                     style="height: 180px; width: auto" alt="{{item.photo}}"/>
                             </div>
-                            <div flex="50" layout="column">
+                            <div flex="66" flex-gt-md="50" layout="column">
                                 <div flex="25" class="header-sm">{{item.name}}</div>
                                 <div flex="25">
                                     <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
                                     <md-icon style="margin: auto; font-size: 20px">star</md-icon>
-                                    <span style="font-size: 20px; font-weight: 200">{{item.reviews.length}} Reviews</span>
+                                    <span style="font-size: 20px; font-weight: 200">{{item.noOfReviews}} Reviews</span>
                                 </div>
                                 <div flex="25">Category: {{item.category}}</div>
-                                <div flex>{{item.description | firstSentence}}</div>
+                                <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
                             </div>
                             <div flex="25" layout="column" class="price" style="color: #009688">
                                 {{item.price | currency}}
