--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -21,7 +21,7 @@
                         <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
                     </div>
                     <div>
-                        Rating: {{single.avgRating}}, Reviews: {{single.noOfReviews}}
+                        {{single.avgRating}} <md-icon style="margin: auto; font-size: 20px">star</md-icon>, {{single.noOfReviews}} Reviews
                     </div>
                 </div>
 
