added controller for itemsByCategory

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -29,6 +29,8 @@
                                 {{category}}
                             </a>
                         </div>
+
+                        {{categoryName}}
                     </md-content>
 
                 </md-sidenav>
