changed item cards

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -47,11 +47,13 @@
                                      ng-mouseleave="height = 3">
                                 <div layout="row">
                                     <div flex="33" flex-gt-md="25" layout-align="center center" style="padding: 20px;">
-                                        <div style="height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center" ng-style="{'background-image':'url({{item.photo}})'}">
+                                        <div style="height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center"
+                                             ng-style="{'background-image':'url({{item.photo}})'}">
 
                                         </div>
                                     </div>
-                                    <div flex="66" flex-gt-sm="45" flex-gt-md="35" flex-gt-lg="50" layout="column" style="padding-left: 25px">
+                                    <div flex="66" flex-gt-sm="45" flex-gt-md="35" flex-gt-lg="50" layout="column"
+                                         layout-align="space-between" style="padding-left: 25px">
                                         <div flex="" class="header-sm">{{item.name}}</div>
                                         <div flex="">
                                             <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
@@ -67,9 +69,11 @@
                                         </div>
                                         <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
                                     </div>
-                                    <div flex="25" hide show-gt-md class="price" style="color: #009688">
-                                        {{item.price | currency}}
-                                        <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                    <div flex="" hide show-gt-md class="price" style="color: #009688">
+                                        <div layout="column" layout-align="start end" style="padding-right: 30px">
+                                            {{item.price | currency}}
+                                            <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                        </div>
                                     </div>
                                 </div>
                             </md-card>
